--- a/src/styles/Steps.css
+++ b/src/styles/Steps.css
@@ -57,31 +57,6 @@ html {
   color: #9E9E9E;
 }
 
-#msform input, #msform textarea {
-  padding: 0px 8px 4px 8px;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  border-radius: 0px;
-  margin-bottom: 25px;
-  margin-top: 2px;
-  width: 100%;
-  box-sizing: border-box;
-  font-family: montserrat;
-  color: #2C3E50;
-  font-size: 16px;
-  letter-spacing: 1px;
-}
-
-#msform input:focus, #msform textarea:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border: none;
-  font-weight: bold;
-  border-bottom: 2px solid skyblue;
-  outline-width: 0;
-}
-
 /*Blue Buttons*/
 #msform .action-button {
   width: 100px;
@@ -95,7 +70,8 @@ html {
   margin: 10px 5px;
 }
 
-#msform .action-button:hover, #msform .action-button:focus {
+#msform .action-button:hover,
+#msform .action-button:focus {
   box-shadow: 0 0 0 2px white, 0 0 0 3px skyblue;
 }
 
@@ -112,7 +88,8 @@ html {
   margin: 10px 5px;
 }
 
-#msform .action-button-previous:hover, #msform .action-button-previous:focus {
+#msform .action-button-previous:hover,
+#msform .action-button-previous:focus {
   box-shadow: 0 0 0 2px white, 0 0 0 3px #616161;
 }
 
@@ -166,24 +143,20 @@ select.list-dt:focus {
 }
 
 /*Icons in the ProgressBar*/
-#progressbar #account:before {
-  font-family: FontAwesome;
-  content: "\f023";
+#progressbar #personal1:before {
+  content: "1";
 }
 
-#progressbar #personal:before {
-  font-family: FontAwesome;
-  content: "\f007";
+#progressbar #personal2:before {
+  content: "2";
 }
 
-#progressbar #payment:before {
-  font-family: FontAwesome;
-  content: "\f09d";
+#progressbar #familybackground:before {
+  content: "3";
 }
 
 #progressbar #confirm:before {
-  font-family: FontAwesome;
-  content: "\f00c";
+  content: "4";
 }
 
 /*ProgressBar before any progress*/
@@ -213,7 +186,8 @@ select.list-dt:focus {
 }
 
 /*Color number of the step and the connector before it*/
-#progressbar li.active:before, #progressbar li.active:after {
+#progressbar li.active:before,
+#progressbar li.active:after {
   background: skyblue;
 }
 
@@ -224,15 +198,15 @@ select.list-dt:focus {
 }
 
 .radio {
-  display:inline-block;
+  display: inline-block;
   width: 204;
   height: 104;
   border-radius: 0;
   background: lightblue;
   box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
-  cursor:pointer;
-  margin: 8px 2px; 
+  cursor: pointer;
+  margin: 8px 2px;
 }
 
 .radio:hover {
@@ -244,7 +218,11 @@ select.list-dt:focus {
 }
 
 /*Fit image in bootstrap div*/
-.fit-image{
+.fit-image {
   width: 100%;
   object-fit: cover;
+}
+
+.form-floating>label {
+  margin-left: 10px;
 }
